# colmap-priors

./: .gitignore  .gitmodules  README.md  config.yaml  justfile  pyproject.toml
scripts/: export.py  export_da3_poses.py  export_pi3_poses.py  export_poses.py  run_scene.sh
src/colmap_priors/: __init__.py  align_and_inject.py  colmap_cli.py  colmap_db.py  colmap_model.py  config.py  eval.py  export_poses.py  external_repos.py  geometry.py  npz_io.py  poses.py  run_scene.py  select_images.py  sim3.py
