[project]
name = "colmap_priors"
version = "0.1.1"
description = "COLMAP pose/position priors pipeline (Pi3 + DepthAnything3) with Sim(3) alignment and eval plots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
]

[project.scripts]
colmap-priors = "colmap_priors.run_scene:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/colmap_priors/**",
  "scripts/**",
  "README.md",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/colmap_priors"]
